Drop guava dependecy from sql-parser.
Remove the Guava dependency from the sql-parser module.

The library was mainly used to check preconditions
(checkNotNull, checkArgument), implement equals/hashCode/toString
methods, and as well provided a couple of util methods to join
strings, etc. Such as all of the above can be easily replaced with
`java.base` there is no reason to depend on Guava in the sql-parser module.